# IRS_2025_01

./: .gitmodules  README.md
.github/workflows/: lab-shell-humble.yml
hand_solo_virtual_nav/: package.xml  setup.py
hand_solo_virtual_nav/config/: pa_nav2_params.yaml
hand_solo_virtual_nav/launch/: nav_launch.py
hand_solo_virtual_nav/map/: pa_warehouse_map_01.pgm
install/: local_setup.sh  setup.sh
install/custom_nav2_bt_nodes/share/custom_nav2_bt_nodes/: behavior_tree_plugins.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_nav2_bt_nodes/share/custom_nav2_bt_nodes/cmake/: custom_nav2_bt_nodesConfig.cmake  (+1 more)
install/hand_solo_arm/share/hand_solo_arm/: package.sh  package.xml
install/hand_solo_virtual_nav/share/hand_solo_virtual_nav/: package.sh
install/pa_warehouse_status/lib/pa_warehouse_status/: pineapple_listener_bot
install/pa_warehouse_status/share/pa_warehouse_status/: package.sh  package.xml
install/pick_nav_place/lib/pick_nav_place/: hs_pick_place  hs_waypoint_follower  plc_hmi_listener  robot_arm_controller  robot_waypoint_follower  warehouse_coordinator
install/pick_nav_place/share/pick_nav_place/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tm12_moveit_config/share/tm12_moveit_config/: package.sh
install/tm12x_moveit_config/share/tm12x_moveit_config/: local_setup.sh  package.sh
install/tm14_moveit_config/share/tm14_moveit_config/: package.sh
install/tm14x_moveit_config/share/tm14x_moveit_config/: package.sh
install/tm16_moveit_config/share/tm16_moveit_config/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tm20_moveit_config/share/tm20_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tm5-700_moveit_config/share/tm5-700_moveit_config/: package.sh
install/tm5-900_moveit_config/share/tm5-900_moveit_config/: package.sh
install/tm5x-700_moveit_config/share/tm5x-700_moveit_config/: package.sh
install/tm5x-900_moveit_config/share/tm5x-900_moveit_config/: local_setup.sh  package.sh
install/tm_description/share/tm_description/: local_setup.sh  package.sh
install/tm_driver/share/tm_driver/: local_setup.sh  package.sh
install/tm_inspect/share/tm_inspect/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tm_mod_urdf/share/tm_mod_urdf/: package.sh
install/tm_msgs/share/tm_msgs/: local_setup.sh  package.sh
install/tm_test/lib/tm_test/: demo_ask_item  demo_ask_sta  demo_connect_tm  demo_get_feedback  demo_get_sct_response  demo_get_sta_response  demo_get_svr_response  demo_get_torque_feedback  demo_leave_listen_node  demo_send_script  demo_set_event  demo_set_io  demo_set_positions  demo_write_item  get_status.py  image_pub.py  sub_img  tm_send_command
install/tm_test/share/tm_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
installC/: setup_override.sh
installC/lib/: compose.override.yaml
lab_shell_docker/: Dockerfile  workspace_entrypoint.sh
lib/: compose.override.yaml
log/: latest_build
maps/: map_1757213136.yaml  pa_warehouse_map_01.yaml  pnp_warehouse_map_01.pgm
maps/v4.0/: pnp_warehouse_map_01.yaml
pa_warehouse_status/: setup.py
pa_warehouse_status/pa_warehouse_status/: pineapple_listener_bot.py  plc_hmi_listener.py
scripts/: set_volume_dir.sh  setup_override.sh
src/.v1.0.0/custom_nav2_bt_nodes/: package.xml
src/.v1.0.0/custom_nav2_bt_nodes/src/: check_path_alignment.cpp
src/.v1.0.0/pick_nav_place/config/: pnp_nav2_params.yaml  pnp_slam_params.yaml
src/.v1.0.0/pick_nav_place/map/: pnp_warehouse_map_01.pgm
src/.v1.0.0/pick_nav_place/pick_nav_place/: plc_hmi_listener.py  plc_hmi_listener_old.py  robot_arm_controller.py  robot_waypoint_follower.py  warehouse_coordinator.py
src/custom_nav2_bt_nodes/: CMakeLists.txt  package.xml  plugin_description.xml
src/custom_nav2_bt_nodes/include/custom_nav2_bt_nodes/: check_path_alignment.hpp
src/custom_nav2_bt_nodes/src/: check_path_alignment.cpp
src/hand_solo_arm/: setup.py
src/hand_solo_virtual_nav/: package.xml  setup.py
src/hand_solo_virtual_nav/config/behavior_trees/: navigate_to_pose_custom.xml
src/hand_solo_virtual_nav/hand_solo_virtual_nav/: hs_waypoint_follower.py
src/hand_solo_virtual_nav/launch/: mapping_launch.py
src/openplc_data/: timerbelt.st
src/pa_warehouse_status/: package.xml
src/pa_warehouse_status/pa_warehouse_status/: pineapple_listener_bot.py
src/pick_nav_place/: package.xml  setup.cfg  setup.py
src/pick_nav_place/config/: pa_nav2_params.yaml  pnp_nav2_params.yaml
src/pick_nav_place/config/behavior_trees/: navigate_to_pose_custom.xml
src/pick_nav_place/launch/: mapping_launch.py  nav_launch.py  pick_nav_place_launch.py
src/pick_nav_place/pick_nav_place/: plc_hmi_listener.py  robot_arm_controller.py  robot_waypoint_follower.py  warehouse_coordinator.py
src/pnp_interfaces/: CMakeLists.txt  package.xml
src/pnp_interfaces/action/: ArmController.action  WaypointFollower.action
src/pnp_interfaces/msg/: ArmMoveOptions.msg  CommandArguments.msg  NavOptions.msg  WaitDuration.msg
src/tmr_ros2/: README.md
src/tmr_ros2/docs/: README.md
src/tmr_ros2/tm_description/xacro/: tm5-900.urdf.xacro
src/tmr_ros2/tm_inspect/: CMakeLists.txt
src/tmr_ros2/tm_moveit/tm20_moveit_config/: .setup_assistant
src/tmr_ros2/tm_msgs/: CMakeLists.txt
src/tmr_ros2/tm_test/: CMakeLists.txt
src/tmr_ros2/tm_test/src/: send_command.cpp
tmr_ros2/amr_visualisation/: CMakeLists.txt  package.xml
tmr_ros2/techman_robot_get_status/: setup.py
tmr_ros2/tm_description/xacro/: handsolo.urdf.xacro  macro.handsolo.urdf.xacro
tmr_ros2/tm_mod_urdf/: setup.py
tmr_ros2/tm_moveit/tm12x_moveit_config/launch/: hand_solo_moveit.launch.py  tm12x_run_move_group.launch.py
tmr_ros2/tm_moveit/tm20_moveit_config/: package.xml
tmr_ros2/tm_moveit/tm20_moveit_config/config/: tm20.srdf
tmr_ros2/tm_moveit/tm20_moveit_config/launch/: tm20_moveit.launch.py
(+39 files in other folders)
