<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_nav_place</name>
  <version>2.0.0</version>
  <description>ROS 2 Package: Containins necessary nodes for completing the Pineapple Grand Challenge; coordinating robot arm pick-and-place with Nav2 navigation (for Omron MoMa).</description>
  <maintainer email="hugh.br3nn4n@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>pnp_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
