<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tm_test</name>
  <version>1.0.2</version>
  <description>get image data</description>

  <maintainer email="leo.wu@tm-robot.com">leo wu</maintainer>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>  
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>libopencv-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tm_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
